# code

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  WORKSPACE.bazel  cspell.config.yaml  pre-commit.sh
.cargo/: config.toml
.cspell-words/: external.txt  project.txt  terms.txt
.github/workflows/: ci.yaml  release.yaml
appbiotic/code/cli/: Cargo.toml  README.md
appbiotic/code/error/: Cargo.toml  LICENSE  NOTICE  README.md  build.rs  cbindgen.toml  error.h
appbiotic/code/error/src/: ffi.rs  lib.rs
appbiotic/code/examples/: Cargo.toml
appbiotic/code/examples/src/: greeter.rs  lib.rs
appbiotic/code/ffi/: Cargo.toml  build.rs  cbindgen.toml  ffi.h
appbiotic/code/ffi/src/: lib.rs
appbiotic/code/generation/protos/: Cargo.toml
appbiotic/code/generation/protos/src/: lib.rs
appbiotic/code/runtime/: Cargo.toml
appbiotic/code/runtime/src/: lib.rs
appbiotic/examples/: Cargo.toml
appbiotic/examples/cli-cmd/: Cargo.toml
appbiotic/examples/cli-cmd/src/: lib.rs
appbiotic/examples/greeter/: Cargo.toml
appbiotic/examples/greeter/src/: cli_cmd.rs  lib.rs
appbiotic/examples/src/: greeter.rs  lib.rs
appbiotic/integrations/tonic/codec/: .gitignore  Cargo.toml  build.rs
appbiotic/integrations/tonic/codec/src/: lib.rs
appbiotic/integrations/tonic/codec/src/test_pb/: mod.rs
appbiotic/integrations/tonic/codec/src/test_pb/appbiotic/integrations/tonic/codec/test/: mod.rs
appbiotic/integrations/tonic/codec/test/: account.proto  group.proto
appbiotic/integrations/tonic/codec/test/color/: themes.proto
