[workspace]

resolver = "2"

default-members = ["appbiotic/integrations/tonic/codec"]

members = [
    "appbiotic/code/cli",
    "appbiotic/code/error",
    "appbiotic/code/runtime",
    "appbiotic/examples",
    "appbiotic/integrations/tonic/codec",
]

[workspace.dependencies]
anyhow = { version = "1.0.75", default-features = false }
appbiotic-code-cli = { version = "0.3.0", path = "appbiotic/code/cli", default-features = false }
appbiotic-code-error = { version = "0.3.0", path = "appbiotic/code/error", default-features = false }
appbiotic-code-runtime = { version = "0.3.0", path = "appbiotic/code/runtime", default-features = false }
appbiotic-examples = { version = "0.3.0", path = "appbiotic/examples", default-features = false }
appbiotic-integrations-tonic-codec = { version = "0.3.0", path = "appbiotic/integrations/tonic/codec", default-features = false }
bytes = { version = "1.5.0", default-features = false }
clap = { version = "4.4.7", default-features = false }
http = { version = "0.2.9", default-features = false }
protobuf = { version = "4.0.0-alpha.0", default-features = false }
protobuf-codegen = { version = "4.0.0-alpha.0", default-features = false }
# protobuf = { version = "3.3.0", default-features = false }
# protobuf-codegen = { version = "3.3.0", default-features = false }
strum = { version = "0.25.0", default-features = false }
strum_macros = { version = "0.25.3", default-features = false }
thiserror = { version = "1.0.50", default-features = false }
tonic = { version = "0.10.2", default-features = false }
tracing = { version = "0.1.40", default-features = false }
tracing-subscriber = { version = "0.3.17", default-features = false }

[patch.crates-io]
# protobuf = { path = "/Users/kris/Code/kriswuollett/rust-protobuf/protobuf" }
# protobuf-codegen = { path = "/Users/kris/Code/kriswuollett/rust-protobuf/protobuf-codegen" }
protobuf = { git = "https://github.com/kriswuollett/rust-protobuf", branch = "mod-hierarchy" }
protobuf-codegen = { git = "https://github.com/kriswuollett/rust-protobuf", branch = "mod-hierarchy" }
