[workspace]

resolver = "2"

default-members = ["appbiotic/code/cli"]

members = [
    "appbiotic/code/cli",
    "appbiotic/code/error",
    "appbiotic/code/runtime",
    "appbiotic/examples",
]

[workspace.dependencies]
anyhow = { version = "1.0.75", default-features = false }
appbiotic-code-cli = { version = "0.3.0-alpha.1", path = "appbiotic/code/cli", default-features = false }
appbiotic-code-error = { version = "0.3.0-alpha.1", path = "appbiotic/code/error", default-features = false }
appbiotic-code-runtime = { version = "0.3.0-alpha.1", path = "appbiotic/code/runtime", default-features = false }
appbiotic-examples = { version = "0.3.0-alpha.1", path = "appbiotic/examples", default-features = false }
clap = { version = "4.4.6", default-features = false }
http = { version = "0.2.9", default-features = false }
safer-ffi = { version = "0.1.4" }
serde = { version = "1.0.190", default-features = false }
serde_json = { version = "1.0.108", default-features = false }
strum = { version = "0.25.0", default-features = false }
strum_macros = { version = "0.25.2", default-features = false }
thiserror = { version = "1.0.49", default-features = false }
tonic = { version = "0.10.2", default-features = false }
tracing = { version = "0.1.39", default-features = false }
tracing-subscriber = { version = "0.3.17", default-features = false }

[workspace.metadata]

[[solutions]]
name = "appbiotic-code-cli"
default-members = ["appbiotic/code/cli"]
default-features = ["appbiotic-examples-greeter"]

[[solutions]]
name = "appbiotic-examples"
default-members = ["appbiotic/examples"]

[[solutions]]
name = "appbiotic-code-error-all"
default-members = ["appbiotic/code/error"]
default-features = ["json"]
