[package]
name = "appbiotic-examples"
version = "0.3.0-alpha.0"
edition = "2021"

[features]
default = ["with-cli-cmd", "with-greeter"]
with-cli-cmd = ["clap/derive", "clap/std"]
with-greeter = []

[dependencies]
appbiotic-code-error = { workspace = true }
clap = { workspace = true, optional = true }
