[package]
name = "appbiotic-examples"
version = "0.3.0-alpha.1"
edition = "2021"

[features]
commands = ["anyhow", "clap/derive", "clap/std", "thiserror"]
appbiotic-examples-greeter = []

[dependencies]
anyhow = { workspace = true, optional = true }
appbiotic-code-error = { workspace = true }
clap = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
