
[package]
name = "appbiotic-code-cli"
version = "0.3.0-alpha.1"
edition = "2021"

[features]
default = ["appbiotic-examples-greeter", "json"]
appbiotic-examples = ["appbiotic-examples/commands"]
appbiotic-examples-greeter = [
    "appbiotic-examples",
    "appbiotic-examples/appbiotic-examples-greeter",
]
json = ["appbiotic-code-error/json"]

[dependencies]
anyhow = { workspace = true }
appbiotic-code-error = { workspace = true }
appbiotic-code-runtime = { workspace = true }
appbiotic-examples = { workspace = true, optional = true }
clap = { workspace = true, features = ["derive", "help", "std", "usage"] }
tracing = { workspace = true }
