
[package]
name = "appbiotic-code-cli"
version = "0.3.0-alpha.1"
edition = "2021"

[features]
default = ["appbiotic-code-examples-greeter"]
appbiotic-code-examples = ["appbiotic-code-examples/commands"]
appbiotic-code-examples-greeter = [
    "appbiotic-code-examples",
    "appbiotic-code-examples/appbiotic-code-examples-greeter",
]
json = ["appbiotic-code-error/json"]

[dependencies]
anyhow = { workspace = true }
appbiotic-code-error = { workspace = true }
appbiotic-code-runtime = { workspace = true }
appbiotic-code-examples = { workspace = true, optional = true }
clap = { workspace = true, features = ["derive", "help", "std", "usage"] }
tracing = { workspace = true }
