
[package]
name = "appbiotic-code-cli"
version = "0.3.0-alpha.1"
edition = "2021"

[features]
full = [
    "appbiotic-code-error/full",
    "appbiotic-code-examples/full",
    "appbiotic-code-runtime/full",
    "json",
    "protos",
]
json = [
    "appbiotic-code-error/json",
    "appbiotic-code-examples/json",
    "appbiotic-code-runtime/json",
]
protos = [
    "appbiotic-code-error/protos",
    "appbiotic-code-examples/protos",
    "appbiotic-code-runtime/protos",
]

[dependencies]
anyhow = { workspace = true }
appbiotic-code-error = { workspace = true }
appbiotic-code-runtime = { workspace = true }
appbiotic-code-examples = { workspace = true, optional = true }
appbiotic-external-googleapis = { workspace = true, features = ["full"] }
clap = { workspace = true, features = ["derive", "help", "std", "usage"] }
tracing = { workspace = true }
