[package]
name = "appbiotic-code-error"
version = "0.3.0-alpha.1"
edition = "2021"
authors = ["Kristopher Wuollett <kris@appbiotic.com>"]
license = "Apache-2.0"
description = "A set of error types to build services that can be managed similarly."
homepage = "https://appbiotic.com/"
repository = "https://github.com/appbiotic/code/"
readme = "README.md"

[features]
with-http = ["dep:http"]

[dependencies]
http = { workspace = true, optional = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
