[package]
name = "appbiotic-code-error"
version = "0.3.0-alpha.1"
edition = "2021"
authors = ["Kristopher Wuollett <kris@appbiotic.com>"]
license = "Apache-2.0"
description = "A set of error types to build services that can be managed similarly."
homepage = "https://appbiotic.com/"
repository = "https://github.com/appbiotic/code/"
readme = "README.md"

[features]
json = ["serde/derive", "serde/std", "serde_json/std"]
with-http = ["dep:http"]
protos = ["dep:prost", "dep:tonic"]

[dependencies]
http = { workspace = true, optional = true }
prost = { workspace = true, optional = true }
safer-ffi = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
tonic = { workspace = true, optional = true }
