[package]
name = "appbiotic-code-examples"
version = "0.3.0-alpha.1"
edition = "2021"

[features]
full = ["appbiotic-code-examples-greeter", "commands"]
commands = ["anyhow", "clap/derive", "clap/std", "thiserror"]
appbiotic-code-examples-greeter = []
json = []
protos = []

[dependencies]
anyhow = { workspace = true, optional = true }
appbiotic-code-error = { workspace = true }
clap = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
