[package]
name = "appbiotic-examples-cli-cmd"
version = "0.2.0"
edition = "2021"

[features]
with-greeter = ["appbiotic-examples-greeter/with-cli-cmd"]

[dependencies]
appbiotic-examples-greeter = { version = "0.2.0", path = "../greeter", default-features = false, optional = true }
clap = { version = "4.4.2", features = ["derive"] }
